fix(ui): fix inline toolbar width on small devices

--- a/automad/ui/less/editorjs/inline.less
+++ b/automad/ui/less/editorjs/inline.less
@@ -48,8 +48,7 @@
 		@media (max-width: @am-blocks-breakpoint-small-max) {
 			left: 5px !important;
 			right: 5px !important;
-			width: 24rem;
-			max-width: 24rem !important;
+			max-width: 25.1rem !important;
 		}
 	}
 
